<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">乳此动人</string>
    <string name="action_feedback">反馈</string>
    <string name="action_share">分享</string>
    <string name="aboutTitle">帮助</string>
    <string name="downloadSingleImage">下载这张照片</string>
    <string name="downloadAllImage">下载此专辑所有图片</string>
    <string name="saveThisLink">保存这个链接</string>
    <string name="saveLiknInclNextLevel">保存这个链接以及下一级链接</string>
    <string name="browseFavorite">收藏</string>
    <string name="isFavorite">已收藏</string>
    <string name="sendEmail">发送 E-mail</string>
    <string name="copyEmailAddr">拷贝E-mail地址</string>
    <string name="addLinkFavorite">收藏这个链接</string>
    <string name="addLinkFavoriteSuccess">已成功收藏这个链接</string>
    <string name="addLinkFavoriteFail">链接添加失败，请稍后再试</string>
    <string name="sendImageByMms">与朋友分享这张图</string>
    <string name="sendMmsSubject">请发给我系列 4 - 7 的账号</string>
    <string name="sendMmsBody">请发给我系列 4 - 7 的账号. \n来自 天天美女</string>
    <string name="sendShareMmsSubject">分享天天美女美图</string>
    <string name="sendShareMmsBody">\n来自 天天美女</string>
    <string name="sendShareSourceSubject">分享天天美女图源</string>
    <string name="sendShareSourceBody">请先把附件通过菜单，导入图片源，来导入应用之中,然后可以在图片源列表中看到。\n来自 天天美女</string>
    <string name="sendReportErrorSubject">天天美女图源报错</string>
    <string name="sendReportErrorBody">图源: %1$s, 有错误。具体错误是: \n\n(1.无法连接; 2.贴图没更新; 3.其他)\n来自 天天美女</string>
    <string name="startDownload">开始下载...</string>
    <string name="stopDownload">已下载完成...</string>
    <string name="downloadAll">保存</string>
    <string name="noImages">啊, 没找到图片. 换一个试试看吧.</string>
    <string name="waitOriginal">正在下载原始大图片，请稍候...</string>
    <string name="failDownload">下载图片失败了, 原因是: %1$s</string>
    <string name="alreadyFirst">已经是第一张图片...</string>
    <string name="alreadyLast">已经是最后一张图片...</string>
    <string name="alreadyFirstPost">已经是第一个贴图...</string>
    <string name="alreadyLastPost">已经是最后一个贴图...</string>
    <string name="waitTitle">下载</string>
	<string name="wait">正在下载贴图列表, 请稍候...</string>
	<string name="more">更多贴图 ...</string>
	<string name="nomore">小编去撸了...等会儿再上新图</string>
	<string name="addFavoriteSuccess">贴图已经加入到您的收藏夹中.</string>
	<string name="cancelFavoriteSuccess">贴图已经从您的收藏夹中移除.</string>
	<string name="waitPostTitle">下载</string>
	<string name="waitPost">向上撸看更多...</string>
	<string name="waitSourceTitle">更新共享图片源</string>
	<string name="waitSource">正在下载图片源列表, 请稍候...</string>
	<string name="waitImportSourceTitle">添加图片源</string>
	<string name="waitImportSource">正在下载图片源, 请稍候...</string>
	<string name="resetSuccess">刷新列表成功.</string>
	<string name="resetFail">刷新列表失败.</string>
	<string name="isCached">设置使用缓存.</string>
	<string name="isNotCached">设置不使用缓存.</string>
	<string name="cached">缓存</string>
	<string name="noCached">无缓存</string>
	<string name="grid">网格</string>
	<string name="list">列表</string>
	<string name="setting">设置</string>
	<string name="account">账号:</string>
	<string name="password">密码:</string>
	<string name="save">保存</string>
	<string name="getAccount">获取免费账号</string>
	<string name="saveSuccess">已成功保存.</string>
	<string name="saveFailed">保存失败.</string>
	<string name="savePostSuccess">已成功添加下载任务.</string>
	<string name="savePostFailed">添加下载任务失败.</string>
	<string name="accountTitle">系列 4 - 7 的账号设置</string>
	<string name="accountReminder">你需要在菜单"设置"中设置系列 4 - 7 的账号,这样可以看到更多图片.</string>
	<string name="netError">发生网络异常, 请试试其他系列或者等等再试.%1$s</string>
	<string name="showImgGallery">在手机图库中显示天天美女的图片.</string>
	<string name="hideImgGallery">在手机图库中隐藏天天美女的图片.</string>
	<string name="hideImgGalleryHint">只有重置了手机图库，显示或隐藏图片才能生效.</string>
    <string name="sourceSelectTitle">选择一个系列...</string>
    <string name="confirmCancelDownloadTitle">确认取消下载</string>
    <string name="confirmCancelPostListDownload">确认取消下载贴图列表</string>
    <string name="canceledPostListDownload">已取消下载更多贴图</string>
    <string name="postDownloadFinishPage">已下载贴图列表页面</string>
    <string name="postDownloadFinishExtract">已截取贴图列表内容</string>
    <string name="postDownloadFinishFirstParse">已完成贴图列表第一步解析</string>
    <string name="postDownloadFinishPageParse">已解析贴图数: %1$s</string>
    <string name="imageDownloadFinishPage">已下载贴图页面</string>
    <string name="imageDownloadFinishPluginExecute">已执行解析插件: %1$s</string>
    <string name="imageDownloadFinishExtract">已截取贴图内容</string>
    <string name="imageDownloadFinishFirstParse">已完成贴图第一步解析</string>
    <string name="imageDownloadFinishPageParse">已解析图片数: %1$s</string>
    <string name="adUnavailableWarning">你的设备无法访问Google广告服务.很抱歉，没有广告就没有图片.</string>
    <string name="addNewSource">图片源及下载</string>
    <string name="url">* 网址:</string>
    <string name="name">名称:</string>
    <string name="urlHint">类似:http://xxx.com/xxx.html,$page$代表页数</string>
    <string name="nameHint">类似:系列 10</string>
    <string name="tag">标签:</string>
    <string name="tagHint">类似 美图,壁纸,等等.</string>
    <string name="beginWords">开始字符:</string>
    <string name="endWords">结束字符:</string>
    <string name="urlPattern">URL 模式:</string>
    <string name="beginWordHint">正文必须包括并且作为起始标识</string>
    <string name="endWordsHint">正文必须包括并且作为结束标识</string>
    <string name="urlPatternHint">链接必须包含的字符</string>
    <string name="imageWidth">图片宽度:</string>
    <string name="imageWidthHint">图片宽度必须大于此值</string>
    <string name="imageHeight">图片高度:</string>
    <string name="imageHeightHint">图片高度必须大于此值</string>
    <string name="singlePage">单个页面</string>
    <string name="forumList">论坛列表</string>
    <string name="postBeginWords">贴图起始字符:</string>
    <string name="postEndWords">贴图结束字符:</string>
    <string name="language">语言:</string>
    <string name="encode">编码:</string>
    <string name="languageHint">类似 en, zh, 等</string>
    <string name="encodeHint">类似 utf-8,gbk,等</string>
    <string name="sourceEditorHint">* 表示必须输入的项目</string>
    <string name="mustInputHint">URL必须输入有效地址</string>
    <string name="deleteSource">贴图源: %1$s 已经删除! </string>
    <string name="isIncludeInSite">仅下载储存在外部空间的图片</string>
    <string name="editSource">编辑图源</string>
    <string name="confirmDeleteSource">确认删除图源?</string>
    <string name="deleteSourceMenu">删除图源</string>
    <string name="resetSource">重置图源所有图片URL</string>
    <string name="resetSourceSuccess">重置图源: %1$s 所有图片URL</string>
    <string name="isIncludeNextPage">是否下载贴图下一页的内容</string>
    <string name="nextPageKeyword">关键字:</string>
    <string name="nextPageKeywordHint">定位下一页URL的关键字,例如:下一页</string>
    <string name="noImageShare">没有图片可以分享...</string>
    <string name="noImageWallpaper">没有图片可以设置为壁纸...</string>
    <string name="setWallpaperSuccess">壁纸设置成功</string>
    <string name="setWallpaperFail">壁纸设置出错,请稍后再试</string>
    <string name="setWallpaperFirstTip">你需要先在 天天美女 中设置图片</string>
    <string name="isOnlyAdult">仅供成年人浏览(18+)</string>
    <string name="shareSource">分享图片源...</string>
    <string name="reportError">反馈错误</string>
    <string name="importSource">导入</string>
    <string name="editTask">修改下载任务</string>
    <string name="deleteTaskMenu">删除下载任务</string>
    <string name="imageAmount">图片数: %1$d</string>
    <string name="localImageAmount">本地图片数: %1$d</string>
    <string name="noSourceShare">因为没找到序列化文件，所以无法分享图片源</string>
    <string name="isOnlyWifi">仅仅在 WIFI打开时下载</string>
    <string name="isOnlyWifiHint">因为"仅仅在 WIFI打开时下载"已经打开，所以无法在没有连接wifi时下载.</string>
    <string name="sharedSource">共享图片源</string>
    <string name="localSource">本地图片源</string>
    <string name="author">作者: %1$s</string>
    <string name="tag2">标签: %1$s</string>
    <string name="url2">网址: %1$s</string>
    <string name="importSourceFailed">导入图片源: %1$s 失败.</string>
    <string name="importSourceSuccess">导入图片源: %1$s 成功.</string>
    <string name="addAlready">已添加</string>
    <string name="allPost">全部</string>
    <string name="favoritePost">收藏</string>
    <string name="hasImagePost">有图片</string>
    <string name="netErrorSource">发生网络异常, 无法获取图片源.</string>
    <string name="onScreenWhileSlideshow">当幻灯片播放时,不要自动关闭屏幕.</string>
    <string name="baseInfo">基本信息</string>
    <string name="extendedSettings">扩展设置</string>
    <string name="postListFilter">贴图列表过滤器</string>
    <string name="postFilter">贴图过滤器</string>
    <string name="imageFilter">图片过滤器</string>
    <string name="miscellaneous">杂项</string>
    <string name="slideshow">播放</string>
    <string name="slideshow_pause">停止</string>
    <string name="setAsWallpaper">壁纸</string>
    <string name="zoom">放大</string>
    <string name="share">分享</string>
    <string name="more2">更多</string>
    <string name="no_network_connection_toast">无网络连接...</string>
    <string name="newFlag">新</string>
    <string name="sure_quit_app">再按一次退出程序</string>
    <string name="shareAppMmsBody">我正在使用@高清乳此动人，养成良好审美，高清强图每日更新，居家必备良品！(下载地址)</string>
    <string name="shareImageMmsBody">我在@高清乳此动人，发现必撸强图，快来看啊！</string>
    <string name="need_select_source">需要先选择一个分类!</string>
    <string name="update_amount">已更新%1$s张专辑!</string>
    <string name="image_menu">图片操作</string>
    <string name="login_error">服务器连接失败,请稍后再试...</string>
    <string name="limitation_error">当前用户有效期:%1$s,剩余下载流量:%2$s</string>
    <string-array name="source_action">
        <item>全部</item>
        <item>收藏</item>
        <item>有图片</item>
    </string-array>
</resources>
