<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2012 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black" >
    </android.support.v4.view.ViewPager>

    <LinearLayout
        android:id="@+id/image_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/actionbar_background"
        android:gravity="left|center_vertical"
        android:orientation="horizontal"
        android:padding="14dp"
        >

    <ImageView
        android:id="@+id/image_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_btn_bg"
            android:paddingLeft="36dp"
            >
        </ImageView>
        
        <TextView
            android:id="@+id/image_title_txt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/app_name"
            android:textSize="22sp" 
            android:textColor="@color/actionbar_text"
            android:gravity="center"
            android:layout_weight="1">
        </TextView>

        <ImageView
            android:id="@+id/image_pop_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/image_menu_btn_bg"
            >
        </ImageView>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/image_pop_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_margin="50dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/image_menu"
            android:textColor="@color/image_menu_title"
            android:textSize="20sp" 
            android:padding="10dp">
            </TextView>
            
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/image_menu_title_seperater"
            />
            
        <TextView
            android:id="@+id/slideshowBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/slideshow"
            android:textColor="@android:color/black"
            android:textSize="18sp" 
            android:padding="10dp">
        </TextView>
        
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/image_menu_seperater"
            />
            
        <TextView
            android:id="@+id/downloadBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/downloadAll"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:padding="10dp" >
        </TextView>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/image_menu_seperater"
            />
            
        <TextView
            android:id="@+id/shareBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/share"
            android:textColor="@android:color/black"
            android:textSize="18sp" 
            android:padding="10dp">
        </TextView>
    </LinearLayout>

    <TextView
            android:id="@+id/displayLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_gravity="right|bottom"
            android:paddingBottom="5dp"
            android:paddingRight="5dp"
            android:text=""
            android:background="@color/category_background"
	        android:textColor="@color/actionbar_text"
            android:textSize="20sp" >
        </TextView>
</FrameLayout>